gcc/testsuite/g++.dg/other/cv_func3.C
// PR c++/58810

typedef int F() const;

F f;           // { dg-error "cv-qualifier" }

struct A
{
  friend F f;  // { dg-error "cv-qualifier" }
};
